--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 
 }
 .descriptions .col-lg-4 {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     text-align: center;
 }
 .descriptions {
@@ -33,8 +33,8 @@ html {
 }
 .header {
 	text-align: center;
-	margin-bottom: 50px;
-	margin-top: 100px;	
+	margin-bottom: 40px;
+	margin-top: 65px;	
 }
 .header h1 {
 	font-size: 90px;
@@ -42,7 +42,7 @@ html {
 }
 .footer {
 	text-align: right;
-	margin-top: -5px;
+	margin-top: -10px;
 }
 .footer a {
 	font-size: 20px;
@@ -93,4 +93,11 @@ ul li a i {
 }
 ul li a i:hover {
 	opacity: .7;
+}
+
+.info {
+	background-color: white;
+	padding: 20px 60px 30px 60px;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
